2000-07-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Support ABRT & CATCH opcodes; fixes Skara Brae problems.

2000-07-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Several risky Usecode changes.

2000-07-23  Jeff Freedman  <jeff@amy.nerble.net>

	* Teleports work now.
	* Fixed bug where monsters walked through walls.

2000-07-20 Tristan Tarrant  <tarrant_tristan@emc.com>

	* files/databuf.h: implemented an abstract DataSource class and Buffer, Stream and 
	File derivatives of it to enable reading data from any of these.
	* vgafile.h, vgafile.cc: use new DataSource classes. More classes should do this.

2000-07-18  Jeff Freedman  <jeff@amy.nerble.net>

	* Flying carpet rotates correctly.

2000-07-17  Tristan Tarrant  <tarrant_tristan@emc.com>
	
	* *: Moved utils.* here where it should have been all along.
	Rearranged everything else to take this into account.
	* tools/expack.cc: The beginnings of a U7 archiver. More soon.

2000-07-14  Jeff Freedman  <jeff@amy.nerble.net>

	* barge.cc (Barge_object): Flying carpet is flying (somewhat)

	* effects.cc (Weather_effect): Improved rain effect.

	* Barges working slightly better.

2000-07-14  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.cc: Don't show eggs by default. Should do the same for
	paths.

2000-07-13  Tristan Tarrant  <tarrant_tristan@emc.com>

	* titles.cc: Text under Guardian's speech and Guardian sinking back
	into screen after his performance :-)

2000-07-13  Tristan Tarrant  <tarrant_tristan@emc.com>

	* palette.cc, palette.h: New files which handle palette functions. 
	Now it is possible to use palettes from different data files.
	* exult.spec.in: simple spec file for creating RPM packages
	* titles.cc, titles.h: Moved intro, endgame and other bits and pieces
	in here. Introduction is nearly complete. 
	* flic/playfli.cc: Center flic on display
	* exult.cc: rearchitected the way the intro stuff is done
	* gamewin.cc: expunged most of the palette and intro junk. Some more 